--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -189,7 +189,7 @@
                             android:text="@string/removetXt"
                             android:textSize="10sp" />
 
-                       <!-- //id allBarcodeBtn-->
+                      <!-- &lt;!&ndash; //id allBarcodeBtn&ndash;&gt;
                         <Button
                             android:id="@+id/updateBarcodeBtn"
                             android:layout_width="100dp"
@@ -201,7 +201,7 @@
                             android:paddingRight="5dp"
                             android:text="@string/updateBarcodeTxt"
                             android:textSize="10sp"
-                            android:visibility="gone" />
+                            android:visibility="gone" />-->
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
